@@ -1,3 +1,11 @@
+2006-10-05  Darin Adler  <darin@apple.com>
+
+        Reviewed by Adam.
+
+        * wtf/Assertions.cpp: Changed assertion formatting to omit the "======"
+        lines so you can see more assertions in less space. Also improved format
+        of file/line information so it works with more development environments.
+
 2006-10-04  Kevin McCullough  <KMcCullough@apple.com>
 
         Reviewed by GGaren
